# boostspace-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/actions/setup-uv/: action.yml
.github/scripts/: detect_version.sh
.github/workflows/: ci.yml  publish.yml  style-check-py.yml
src/boostspace_mcp/: api_client.py  config.py  server.py  spec_loader.py  tool_registry.py  version.py
utils/: generate_requirements.py
