[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boostspace-mcp-server"
dynamic = ["version"]
description = "A Model Context Protocol (MCP) server for Boost.space"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
maintainers = [
  { name = "Boost.space", email = "team@boost.space" },
]
dependencies = [
  "mcp[cli]>=1.6.0",
  "requests>=2.28.0",
]

[project.urls]
"Homepage"    = "https://boost.space"
"Bug Tracker" = "https://github.com/boostspace/boostspace-mcp-server/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "boostspace_mcp.__version__" }

[project.optional-dependencies]
dev   = ["pytest", "ruff", "setuptools", "liccheck"]
tests = ["pytest"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.isort]
line_length = 120
multi_line_output = 0

[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "new bsd license",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software license",
  "isc license",
  "isc license (iscl)",
  "mit",
  "mit license",
  "python software foundation license",
]
unauthorized_licenses = [
  "gpl v3",
  "gnu lgpl",
  "lgpl with exceptions or zpl",
]

[tool.setuptools.packages.find]
where  = ["src"]
include = ["boostspace_mcp*"]

[tool.mypy]
strict = true