[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boostspace-mcp-server"
version = "0.1.2"
description = "A Model Context Protocol (MCP) server for Boost.space"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
maintainers = [
  { name = "Boost.space", email = "team@boost.space" },
]
dependencies = [
  "mcp[cli]>=1.6.0",
  "requests>=2.28.0",
]

[project.urls]
"Homepage"    = "https://boost.space"
"Bug Tracker" = "https://github.com/boostspace/boostspace-mcp-server/issues"


[tool.setuptools]
package-dir = { "" = "src" }


[tool.uv]
dev-dependencies = [
  "pytest>=8.3.5",
  "coverage>=7.5.3",
  "pytest-coverage>=0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.11.10",
  "pyright>=1.1.400",
  "licensecheck>=2025.1.0",
  "mypy>=1.15.0",
]


[tool.pytest.ini_options]
addopts = "-q"


[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".github"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]


[tool.liccheck]
authorized_licenses = [
  "bsd",
  "new bsd",
  "bsd license",
  "new bsd license",
  "simplified bsd",
  "apache",
  "apache 2.0",
  "apache software license",
  "isc license",
  "isc license (iscl)",
  "mit",
  "mit license",
  "python software foundation license",
]
unauthorized_licenses = [
  "gpl v3",
  "gnu lgpl",
  "lgpl with exceptions or zpl",
]


[tool.setuptools.packages.find]
where  = ["src"]
include = ["boostspace_mcp*"]


[tool.mypy]
strict = true


[tool.licensecheck]
only_licenses = [
  "APACHE SOFTWARE LICENSE"
]